[tool.poetry]
name = "GWTune"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
pot = "0.9.0"
matplotlib = "^3.6.1"
pandas = "^1.5.0"
scipy = "*"
seaborn = "^0.12.0"
optuna = "^3.2.0"
scikit-learn = "*"
sqlalchemy = "^2.0.9"
sqlalchemy-utils = "*"
torch = "2.0.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
