[tool.poetry]
name = "GWTune"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"

matplotlib = "*"
numpy = "*"
optuna = ">=3.2.0"
pandas = "*"
pot = "==0.9.4"
pymysql = "*" 
scikit-learn = "*"
scipy = "*"
seaborn = "*"
sqlalchemy = "*"
tqdm = "*"
umap-learn = "*"
sqlalchemy-utils = "==0.41.1"
torch = "==2.4.1"
torchvision = "==0.19.1"
torchaudio = "==2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
